feat(nfe): assinatura XML funcional, integração com certificado A1 e correção do pipeline de testes